# tree-sitter-asciidoc

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  biome.jsonc  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-asciidoc.pc.in
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_asciidoc/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterAsciiDocTests/: TreeSitterAsciiDocTests.swift
bindings/swift/TreeSitterAsciidoc/: asciidoc.h
docs/: rule_coverage.md
examples/: example.adoc  example_admonitions.adoc  example_conditionals.adoc  example_table.adoc
queries/: highlights.scm  images.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: 00_document_structure.txt  20_attributes.txt  21_titles.txt  22_part_and_sections.txt  23_breaks.txt  24_comments.txt  25_blocks.txt  26_paragraphs.txt  27_admonitions.txt  28_conditionals.txt  30_images.txt  30_macros.txt  31_lists.txt  32_tables.txt  35_others.txt  90_special_cases.txt
